zerocopy-derive/tests/ui-nightly/derive_transparent.nightly.stderr
error[E0463]: can't find crate for `zerocopy_derive` which `zerocopy` depends on
 --> $DIR/derive_transparent.rs:9:1
  |
9 | extern crate zerocopy_renamed;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error[E0433]: failed to resolve: could not find `pointer` in `imp`
   --> $DIR/../include.rs:138:13
    |
138 |             pointer::{cast::CastSized, BecauseImmutable},
    |             ^^^^^^^ could not find `pointer` in `imp`

error[E0432]: unresolved imports `super::imp::Ptr`, `super::imp::ReadOnly`
   --> $DIR/../include.rs:111:39
    |
111 |         use super::imp::{MaybeUninit, Ptr, ReadOnly};
    |                                       ^^^  ^^^^^^^^ no `ReadOnly` in `util::imp`
    |                                       |
    |                                       no `Ptr` in `util::imp`
    |                                       help: a similar name exists in the module: `str`

error[E0432]: unresolved imports `super::imp::pointer`, `super::imp::ReadOnly`
   --> $DIR/../include.rs:138:13
    |
138 |             pointer::{cast::CastSized, BecauseImmutable},
    |             ^^^^^^^ could not find `pointer` in `imp`
139 |             ReadOnly,
    |             ^^^^^^^^ no `ReadOnly` in `util::imp`

error[E0433]: failed to resolve: could not find `KnownLayout` in `imp`
  --> $DIR/../include.rs:55:21
   |
55 |         super::imp::KnownLayout,
   |                     ^^^^^^^^^^^ could not find `KnownLayout` in `imp`

error[E0433]: failed to resolve: could not find `Immutable` in `imp`
  --> $DIR/../include.rs:56:21
   |
56 |         super::imp::Immutable,
   |                     ^^^^^^^^^ could not find `Immutable` in `imp`

error[E0433]: failed to resolve: could not find `FromBytes` in `imp`
  --> $DIR/../include.rs:57:21
   |
57 |         super::imp::FromBytes,
   |                     ^^^^^^^^^ could not find `FromBytes` in `imp`

error[E0433]: failed to resolve: could not find `IntoBytes` in `imp`
  --> $DIR/../include.rs:58:21
   |
58 |         super::imp::IntoBytes,
   |                     ^^^^^^^^^ could not find `IntoBytes` in `imp`

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/../include.rs:62:7
   |
62 |     #[zerocopy(crate = "zerocopy_renamed")]
   |       ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
64 +     #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
65 |     pub struct AU16(pub u16);
   |

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/derive_transparent.rs:25:3
   |
25 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^
   |
help: `zerocopy` is an attribute that can be used by the derive macros `ByteEq`, `ByteHash`, `FromBytes`, `FromZeros`, `Immutable`, `IntoBytes`, `KnownLayout`, `SplitAt`, `TryFromBytes` and `Unaligned`, you might be missing a `derive` attribute
   |
27 + #[derive(ByteEq, ByteHash, FromBytes, FromZeros, Immutable, IntoBytes, KnownLayout, SplitAt, TryFromBytes, Unaligned)]
28 | struct TransparentStruct<T> {
   |

error[E0405]: cannot find trait `TryFromBytes` in module `super::imp`
   --> $DIR/../include.rs:110:53
    |
110 |     pub fn test_trivial_is_bit_valid<T: super::imp::TryFromBytes>() {
    |                                                     ^^^^^^^^^^^^ not found in `super::imp`

error[E0405]: cannot find trait `TryFromBytes` in module `super::imp`
   --> $DIR/../include.rs:130:35
    |
130 |         assert!(<T as super::imp::TryFromBytes>::is_bit_valid(ptr));
    |                                   ^^^^^^^^^^^^ not found in `super::imp`

error[E0405]: cannot find trait `TryFromBytes` in module `super::imp`
   --> $DIR/../include.rs:133:45
    |
133 |     pub fn test_is_bit_valid<T: super::imp::TryFromBytes, V: super::imp::IntoBytes>(
    |                                             ^^^^^^^^^^^^ not found in `super::imp`

error[E0405]: cannot find trait `IntoBytes` in module `super::imp`
   --> $DIR/../include.rs:133:74
    |
133 |     pub fn test_is_bit_valid<T: super::imp::TryFromBytes, V: super::imp::IntoBytes>(
    |                                                                          ^^^^^^^^^ not found in `super::imp`

error: aborting due to 14 previous errors

Some errors have detailed explanations: E0405, E0432, E0433, E0463.
For more information about an error, try `rustc --explain E0405`.
